<resources>
    <string name="app_name">Peluqueria</string>
    <string name="save">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="toastacet">Toast acept</string>
    <string name="toasterror">Toast Error</string>
    <string name="email">Correo</string>
    <string name="Login">Iniciar Sesion</string>
    <string name="pass">Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="pass2">Repetir contraseña</string>
    <string name="warning">Se necesitan mas de 6 caracteres</string>


</resources>